@startuml
'https://plantuml.com/class-diagram

abstract class AbstractVehicle
interface IVehicle
class Person
class Car
class Boat
class Plane

IVehicle <|-- AbstractVehicle
AbstractVehicle <|- Car
AbstractVehicle <|- Boat
AbstractVehicle <|- Plane
Person "1" *-- "0...*" AbstractVehicle

interface IVehicle {
+ register()
+ calculateExciseTax()
}

class Person {
- name
- address
}
@enduml